# DuckDbUpRunning

./: .gitignore  DuckDbUpRunning.py  README.md  main.py  pyproject.toml  requirements.txt
