[project]
name = "duckdbuprunning"
version = "0.1.0"
description = "DuckDB Up and Running Book"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "fastparquet>=2024.11.0",
    "marimo>=0.14.17",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]
